Fix vertical align

--- a/Module-4/Carousel/style/style.css
+++ b/Module-4/Carousel/style/style.css
@@ -54,6 +54,9 @@ button {
 	border-radius: 5em;
 
 	cursor: pointer;
+
+	/* vertical align */
+	transform: translateY(-50%);
 }
 
 #left {
